fixed project li center alignment

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -44,7 +44,8 @@
 
 
 	.app-link, .code-link {
-		margin-top: 475px;
+		// position: absolute;
+		// margin-top: 120px;
 		font-size: 20px;
 	}
 
@@ -65,6 +66,12 @@
 	}
 }
 
+.avoid-float-damage {
+	// outline: 1px solid orange;
+	width: 100%;
+	height: 500px;
+}
+
 @media (max-width: 1300px) {
 	.projects {
 		.projects-list {
@@ -77,11 +84,15 @@
 				text-align: center;
 				outline: 1px solid white;
 			}
-			.app-link, .code-link {
-				margin-top: 380px;
-			}
+			// .app-link, .code-link {
+			// 	margin-top: 380px;
+			// }
+		}
+		.avoid-float-damage {
+			height: 410px;
 		}
 	}
+
 }
 
 @media (max-width: 750px) {
@@ -91,7 +102,6 @@
 				min-height: 440px;
 			}
 			.app-link, .code-link {
-				margin-top: 400px;
 				font-size: 15px;
 			}
 		}
@@ -100,6 +110,9 @@
 		}
 		.built-with, .app-desc {
 			font-size: 15px;
+		}
+		.avoid-float-damage {
+			height: 420px;
 		}
 	}
 }
